src/served/response_parser.cpp

#line 1 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
/*
 * Copyright (C) 2014 MediaSift Ltd.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

#include <served/response_parser.hpp>
#include <cstdlib> // strtol

#define LEN(AT, FPC) (FPC - data - AT)
#define MARK(M, FPC) (M = FPC - data)
#define PTR_TO(F)    (data + F)

using namespace served;
using namespace std;

/** machine **/

#line 38 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
static const int response_parser_start = 1;
static const int response_parser_first_final = 120;
static const int response_parser_error = 0;

static const int response_parser_en_main = 1;


#line 142 "/home/vagrant/src/dev/served/src/served/response_parser.rl"


response_parser::response_parser()
    : cs(0)
    , d_offset(0)
{
    
#line 54 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	{
	cs = response_parser_start;
	}

#line 149 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
}

response_parser::~response_parser()
{}

size_t 
response_parser::execute(const char *data, size_t len)  {
	size_t body_start  = 0;
	int    content_len = -1;
	int    chunks_done = 0;
	size_t mark        = 0;
	size_t field_start = 0;
	size_t field_len   = 0;
	size_t nread       = 0;
	
    const char *p  = data+d_offset;
    const char *pe = data+len;

    // ASSERT(*pe == '\0');

    
#line 81 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 72 )
		goto tr2;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr0;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr0;
	} else
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 37 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p);
    }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 112 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr3;
		case 13: goto tr4;
		case 59: goto tr6;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st2;
	} else
		goto st2;
	goto st0;
tr3:
#line 78 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //chunked = 1;
        content_len = strtol(PTR_TO(mark), NULL, 16);
        chunks_done = content_len <= 0;

        if(chunks_done) {
            last_chunk_element(data, PTR_TO(mark), LEN(mark, p));
        }
        else {
            chunk_size_element(data, PTR_TO(mark), LEN(mark, p));
        }
    }
#line 95 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        body_start = p - data + 1;
        header_done_element(data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr7:
#line 95 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        body_start = p - data + 1;
        header_done_element(data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr9:
#line 45 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        field_len = LEN(field_start, p);
    }
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
#line 95 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        body_start = p - data + 1;
        header_done_element(data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr15:
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
#line 95 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        body_start = p - data + 1;
        header_done_element(data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr74:
#line 57 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //close = 1;
    }
#line 95 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        body_start = p - data + 1;
        header_done_element(data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
st120:
	if ( ++p == pe )
		goto _test_eof120;
case 120:
#line 204 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	goto st0;
tr4:
#line 78 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //chunked = 1;
        content_len = strtol(PTR_TO(mark), NULL, 16);
        chunks_done = content_len <= 0;

        if(chunks_done) {
            last_chunk_element(data, PTR_TO(mark), LEN(mark, p));
        }
        else {
            chunk_size_element(data, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st3;
tr10:
#line 45 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        field_len = LEN(field_start, p);
    }
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st3;
tr16:
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st3;
tr75:
#line 57 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //close = 1;
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 251 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	if ( (*p) == 10 )
		goto tr7;
	goto st0;
tr6:
#line 78 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //chunked = 1;
        content_len = strtol(PTR_TO(mark), NULL, 16);
        chunks_done = content_len <= 0;

        if(chunks_done) {
            last_chunk_element(data, PTR_TO(mark), LEN(mark, p));
        }
        else {
            chunk_size_element(data, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st4;
tr12:
#line 45 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        field_len = LEN(field_start, p);
    }
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
tr18:
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 294 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 33: goto tr8;
		case 124: goto tr8;
		case 126: goto tr8;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr8;
		} else if ( (*p) >= 35 )
			goto tr8;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr8;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr8;
		} else
			goto tr8;
	} else
		goto tr8;
	goto st0;
tr8:
#line 41 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(field_start, p); 
    }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 328 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr9;
		case 13: goto tr10;
		case 33: goto st5;
		case 59: goto tr12;
		case 61: goto tr13;
		case 124: goto st5;
		case 126: goto st5;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st5;
		} else if ( (*p) >= 35 )
			goto st5;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st5;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st5;
		} else
			goto st5;
	} else
		goto st5;
	goto st0;
tr13:
#line 45 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        field_len = LEN(field_start, p);
    }
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 370 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 33: goto tr14;
		case 124: goto tr14;
		case 126: goto tr14;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr14;
		} else if ( (*p) >= 35 )
			goto tr14;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr14;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr14;
		} else
			goto tr14;
	} else
		goto tr14;
	goto st0;
tr14:
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 404 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr15;
		case 13: goto tr16;
		case 33: goto st7;
		case 59: goto tr18;
		case 124: goto st7;
		case 126: goto st7;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st7;
		} else if ( (*p) >= 35 )
			goto st7;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st7;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st7;
		} else
			goto st7;
	} else
		goto st7;
	goto st0;
tr2:
#line 37 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p);
    }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 441 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	if ( (*p) == 84 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 84 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 80 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 47 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 46 )
		goto st14;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 32 )
		goto tr26;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
tr26:
#line 74 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_version_element(data, PTR_TO(mark), LEN(mark, p));
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 508 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr27;
	goto st0;
tr27:
#line 37 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p);
    }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 522 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	if ( (*p) == 32 )
		goto tr28;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st17;
	goto st0;
tr28:
#line 69 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //status = strtol(PTR_TO(mark), NULL, 10);
        status_code_element(data, PTR_TO(mark), LEN(mark, p));
    }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 539 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	if ( (*p) == 10 )
		goto st0;
	goto tr30;
tr30:
#line 37 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p);
    }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 553 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr32;
		case 13: goto tr33;
	}
	goto st19;
tr45:
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr32:
#line 65 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        phrase_element(data, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr42:
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr111:
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
#line 91 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //chunked = 1;
    }
	goto st20;
tr113:
#line 91 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //chunked = 1;
    }
	goto st20;
tr158:
#line 53 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        content_len = strtol(PTR_TO(mark), NULL, 10);
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 611 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr7;
		case 13: goto st3;
		case 33: goto tr35;
		case 67: goto tr36;
		case 84: goto tr37;
		case 99: goto tr36;
		case 116: goto tr37;
		case 124: goto tr35;
		case 126: goto tr35;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr35;
		} else if ( (*p) >= 35 )
			goto tr35;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr35;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr35;
		} else
			goto tr35;
	} else
		goto tr35;
	goto st0;
tr35:
#line 41 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(field_start, p); 
    }
	goto st21;
tr76:
#line 57 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //close = 1;
    }
#line 41 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(field_start, p); 
    }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 661 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto st0;
tr41:
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
	goto st22;
tr39:
#line 45 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        field_len = LEN(field_start, p);
    }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 702 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr42;
		case 13: goto tr43;
		case 32: goto tr41;
	}
	if ( 9 <= (*p) && (*p) <= 12 )
		goto tr41;
	goto tr40;
tr40:
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 721 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr45;
		case 13: goto tr46;
	}
	goto st23;
tr46:
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st24;
tr33:
#line 65 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        phrase_element(data, PTR_TO(mark), LEN(mark, p));
    }
	goto st24;
tr43:
#line 49 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(mark, p); 
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st24;
tr159:
#line 53 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        content_len = strtol(PTR_TO(mark), NULL, 10);
    }
#line 61 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        http_field(data, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 763 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	if ( (*p) == 10 )
		goto st20;
	goto st0;
tr36:
#line 41 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(field_start, p); 
    }
	goto st25;
tr77:
#line 57 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{
        //close = 1;
    }
#line 41 "/home/vagrant/src/dev/served/src/served/response_parser.rl"
	{ 
        MARK(field_start, p); 
    }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 787 "/home/vagrant/src/dev/served/src/served/response_parser.cpp"
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 79: goto st26;
		case 111: goto st26;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 78: goto st27;
		case 110: goto st27;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 78: goto st28;
		case 84: goto st101;
		case 110: goto st28;
		case 116: goto st101;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 69: goto st29;
		case 101: goto st29;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 67: goto st30;
		case 99: goto st30;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
